@@ -2,6 +2,8 @@
  (reported by Jan Egil Hagen).
 -Don't crash the SQL engine if you have more than 1000 tags (reported by Mats 
  Hansson).
+-Update the window title on a sync server if a different database was loaded.
+
 
 Mnemosyne 2.3.1 : 2014-06-18
 
